# GD32F103VB_VScode

./: CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
device/: GD32F10x_HD.svd  RTE_Components.h  linker.ld
device/inc/: gd32f10x.h  gd32f10x_enet.h
src/: main.cpp
